<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="mapModel"
            type="com.rideaustin.ui.map.MapViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mapContainer"
        style="@style/RelativeLayout.Base"
...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <TextView
                    android:id="@+id/pickup_address"
                    style="@style/RATextView.MontserratLight"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/autocomplete_height"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/white"
                    android:clickable="true"
...
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/rate_driver_divider_height"
                    android:layout_below="@+id/pickup_address"
                    android:background="@color/divider" />

                <TextView
                    android:id="@+id/destination_address"
                    style="@style/RATextView.MontserratLight"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/autocomplete_height"
                    android:layout_below="@id/address_divider"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/white"
...
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/rate_driver_divider_height"
                        android:layout_below="@+id/destination_address"
                        android:background="@color/divider" />

                    <EditText
                        android:id="@+id/comment"
                        style="@style/RATextView.MontserratLight"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/autocomplete_height"
                        android:layout_below="@id/comments_divider"
                        android:layout_centerHorizontal="true"
                        android:background="@android:color/white"
...
                        app:ringColor="#FFFFFF"
                        app:ringThickness="1dp" />

                </FrameLayout>

                <TextView
                    android:id="@+id/set_pickup_location"
                    style="@style/RATextView.MontserratLight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="4"
...
