...
        <android.support.v7.widget.CardView
            android:id="@+id/destination_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/addressInput"
                style="@style/RATextView.MontserratLight"
                android:layout_width="match_parent"
                android:layout_height="@dimen/autocomplete_height"
                android:layout_centerHorizontal="true"
                android:background="@android:color/white"
                android:clickable="true"
...
                android:tint="@color/light_icon_tint"
                android:layout_gravity="right|center_vertical"/>

        </android.support.v7.widget.CardView>

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@drawable/list_item_divider"
            android:dividerHeight="0.1dp"
            tools:listitem="@layout/view_address_selection_item" />

...
