...
            android:layout_marginRight="@dimen/basic_widget_margin"
            android:layout_marginBottom="@dimen/basic_widget_margin"
            android:clickable="true"
            android:focusable="true"> <!-- RA-9460: set focusable/clickable to prevent map interaction -->

            <RelativeLayout
                android:id="@+id/requestPanel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/ll_request_buttons"
                    android:layout_width="match_parent"
...
                    <View
                        android:layout_width="@dimen/rate_driver_divider_height"
                        android:layout_height="fill_parent"
                        android:background="@color/divider" />

                    <Button
                        android:id="@+id/btn_cancel_pickup"
                        style="@style/BorderLessButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="@dimen/btn_drawable_padding"
                        android:drawableTop="@drawable/close"
...
